--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="../css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="/includes/menu::menu"></div>
 
 <h1>hej admin</h1>
 
+<script src="../js/bootstrap.js"></script>
 </body>
 </html>
