--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-
-<h1>hej</h1>
-
+<div th:replace="/includes/menu::menu"></div>
+<script src="/js/bootstrap.js"></script>
 </body>
 </html>
