--- a/src/main/resources/templates/includes/menu.html
+++ b/src/main/resources/templates/includes/menu.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == '/' ? 'active' : ''">
-                <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link" th:href="${prefix}+'/'">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == '/courses' ? 'active' : ''">
-                <a class="nav-link" href="/courses">Courses</a>
+                <a class="nav-link" th:href="${prefix}+'/courses'">Courses</a>
             </li>
         </ul>
-        <form class="form-inline" th:if="${#httpServletRequest.requestURI} == '/courses'">
+        <form class="form-inline" th:if="${#httpServletRequest.requestURI} == ${prefix}+'/courses'">
             <input aria-label="Search" class="form-control mr-sm-2" placeholder="Search for courses" type="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
