--- a/src/main/resources/templates/includes/menu.html
+++ b/src/main/resources/templates/includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar_top" th:fragment="menu"
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar_top" th:fragment="menu" style="margin-bottom: 20px;"
      xmlns:th="http://www.thymeleaf.org">
     <!--th:classappend="${user.gender} == 'M' ? 'bg-primary':'bg-danger'" -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -11,7 +11,7 @@
                 <a class="nav-link" th:href="${prefix}+'/'">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == '/courses' ? 'active' : ''">
-                <a class="nav-link" th:href="${prefix}+'/courses'">Courses</a>
+                <a class="nav-link" th:href="${prefix}+'/course/'">Courses</a>
             </li>
         </ul>
         <form class="form-inline" th:if="${#httpServletRequest.requestURI} == ${prefix}+'/courses'">
