Teacher can now edit courses

--- a/src/main/resources/templates/teacher/courseCreate.html
+++ b/src/main/resources/templates/teacher/courseCreate.html
@@ -67,8 +67,8 @@
                             <div class="form-group">
                                 <label>Mandatory or Elective:</label>
                                 <select name="mandatoryOrElective" class="form-control">
-                                    <option value="mandatory">Mandatory</option>
-                                    <option value="elective">Elective</option>
+                                    <option value="Mandatory">Mandatory</option>
+                                    <option value="Elective">Elective</option>
                                 </select>
                             </div>
                         </div>
