--- a/src/main/resources/templates/teacher/courseList.html
+++ b/src/main/resources/templates/teacher/courseList.html
@@ -14,7 +14,7 @@
     <div class="row" th:if="${success}">
         <div class="col-md-12">
             <div class="alert alert-success" id="working">
-                <i class="fas fa-check"></i>&nbsp;&nbsp;Successfully created the course! Hurray!
+                <i class="fas fa-check"></i>&nbsp;&nbsp;Your request was successfully executed! Hurray!
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
                     <td th:text="${course.courseNameDanish}"></td>
                     <td th:text="${course.classCode}"></td>
                     <td>
-                        <a class="btn btn-primary float-right">Edit</a>
+                        <a class="btn btn-primary btn-sm float-right" th:href="'/teacher/course/edit/'+${course.id}">Edit</a>
                     </td>
                 </tr>
                 </tbody>
