- Now showing a list that the user(student) is enlisted in. - Fixed menu link paths so that it shows search bar.

--- a/src/main/resources/templates/student/courseList.html
+++ b/src/main/resources/templates/student/courseList.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Courses</title>
+    <link href="/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 <div th:replace="/includes/menu::menu"></div>
@@ -37,6 +38,8 @@
     </div>
     <div class="col-md-2"></div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/js/bootstrap.js"></script>
 <script>
     // Send CSRF protection header upon each request.
     // This is needed for the Spring default CSRF protection that is required when send a request.
