--- a/src/main/resources/templates/includes/menu.html
+++ b/src/main/resources/templates/includes/menu.html
@@ -7,14 +7,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == '/' ? 'active' : ''">
+            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == ${prefix}+'/' ? 'active' : ''">
                 <a class="nav-link" th:href="${prefix}+'/'">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI} == '/courses' ? 'active' : ''">
-                <a class="nav-link" th:href="${prefix}+'/course/'">Courses</a>
+            <li class="nav-item"
+                th:classappend="${#httpServletRequest.requestURI} == ${prefix}+'/courses/' ? 'active' : ''">
+                <a class="nav-link" th:href="${prefix}+'/courses/'">Courses</a>
             </li>
         </ul>
-        <form class="form-inline" th:if="${#httpServletRequest.requestURI} == ${prefix}+'/courses'">
+        <form class="form-inline" th:if="${#httpServletRequest.requestURI} == ${prefix}+'/courses/'">
             <input aria-label="Search" class="form-control mr-sm-2" placeholder="Search for courses" type="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
