- Hot fix with url path on html pages - A course can be deleted from the database but only if a student hasn't applied for the course. It fails to delete a course if a foreign key exists in studen_courses table.

--- a/src/main/resources/templates/teacher/courseCreate.html
+++ b/src/main/resources/templates/teacher/courseCreate.html
@@ -186,7 +186,7 @@
                 url: "/course/create",
                 data: $("#createCourseForm").serialize(),
                 success: function(msg) {
-                    window.location.href = "http://localhost:8080/teacher/course/";
+                    window.location.href = "http://localhost:8080/teacher/courses/";
                 },
                 error: function(what) {
                     console.log(what);
