--- a/src/main/resources/templates/teacher/courseEdit.html
+++ b/src/main/resources/templates/teacher/courseEdit.html
@@ -187,7 +187,7 @@
             url: "/course/edit",
             data: $("#saveCourseForm").serialize(),
             success: function(msg) {
-                window.location.href = "http://localhost:8080/teacher/course/";
+                window.location.href = "http://localhost:8080/teacher/courses/";
             },
             error: function(what) {
                 console.log(what);
